# memedeck-hyperware-app

./: .env  Cargo.toml  metadata.json
api/: memedeck:template.os-v0.wit
memedeck/: Cargo.toml
memedeck/src/: icon  lib copy.rs  lib.rs  proxy.rs
pkg/: manifest.json
test/: tests.toml
test/memedeck-test/: Cargo.toml  metadata.json
test/memedeck-test/api/: memedeck-test:template.os-v0.wit
test/memedeck-test/memedeck-test/: Cargo.toml
test/memedeck-test/memedeck-test/src/: lib.rs
test/memedeck-test/pkg/: manifest.json
