[package]
name = "memedeck"
version = "0.1.0"
edition = "2021"

[features]
simulation-mode = []

[dependencies]
hex = "0.4.3"
lol_html = "2.2.0"
anyhow = "1.0"
base64 = "0.21.6"
hyperware_process_lib = { version = "1.0.3", features = ["logging"] }
process_macros = "0.1.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.4"
wit-bindgen = "0.36.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "hyperware:process"
